--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script type="text/javascript">
-      new $LAB()
+      $LAB()
         .script('js/a.js')
         .wait(function () {
           console.log('a loaded：1')
